# krabby

./: .gitignore  Cargo.toml  PKGBUILD  README.md  build.rs  flake.nix  install.sh  nameslist.txt  pokemon.json
assets/: pokemon.json
assets/colorscripts/regular/: abomasnow  abomasnow-mega  abomasnow-mega.txt  abomasnow.txt  abra  abra.txt  absol  absol-mega  absol-mega.txt  absol.txt  accelgor  accelgor.txt  aegislash  aegislash.txt  aerodactyl  aerodactyl-mega  aerodactyl-mega.txt  aerodactyl.txt  aggron  aggron-mega  aggron-mega.txt  aggron.txt  aipom  alakazam  alakazam-mega  alakazam.txt  alcremie  alcremie-gmax  alcremie.txt  alomomola  altaria  altaria-mega  altaria-mega.txt  amaura  amaura.txt  ambipom  amoonguss  amoonguss.txt  ampharos  ampharos-mega  (+1649 more)
assets/colorscripts/shiny/: abomasnow  abomasnow-mega  abomasnow.txt  abra  absol  absol-mega  absol-mega.txt  accelgor  aegislash  aegislash.txt  aerodactyl  aerodactyl-mega  aggron  aggron-mega  aggron-mega.txt  aggron.txt  aipom  alakazam  alakazam-mega  alakazam-mega.txt  alakazam.txt  alcremie  alcremie-gmax  alcremie-gmax.txt  alomomola  alomomola.txt  altaria  altaria-mega  amaura  (+1610 more)
colorscripts/regular/: aipom.txt  alakazam-mega.txt  alcremie-gmax.txt  alomomola.txt  altaria.txt  ambipom.txt  ampharos-mega.txt  ampharos.txt  araquanid.txt  arbok.txt  archen.txt  archeops.txt  ariados.txt  aromatisse.txt  aron.txt  arrokuda.txt  articuno-galar.txt  audino.txt  aurorus.txt  avalugg-hisui.txt  axew.txt  azumarill.txt  banette.txt  barboach.txt  barraskewda.txt  basculegion.txt  bastiodon.txt  bayleef.txt  beautifly.txt  beedrill-mega.txt  beheeyem.txt  beldum.txt  bellossom.txt  bergmite.txt  blacephalon.txt  blastoise.txt  blaziken.txt  blitzle.txt  boldore.txt  bonsly.txt  (+449 more)
colorscripts/shiny/: abomasnow-mega.txt  abra.txt  absol.txt  accelgor.txt  aerodactyl-mega.txt  aerodactyl.txt  aipom.txt  altaria-mega.txt  altaria.txt  ambipom.txt  amoonguss.txt  ampharos-mega.txt  anorith.txt  appletun.txt  arbok.txt  arceus.txt  archen.txt  archeops.txt  arctozolt.txt  aromatisse.txt  aron.txt  audino-mega.txt  avalugg.txt  azelf.txt  bagon.txt  baltoy.txt  banette-mega.txt  banette.txt  barbaracle.txt  barboach.txt  basculegion.txt  basculin.txt  bastiodon.txt  beautifly.txt  beedrill-mega.txt  beedrill.txt  beheeyem.txt  bellossom.txt  bellsprout.txt  bergmite.txt  (+501 more)
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  pokemon.rs
