[package]
name = "krabby"
version = "0.1.6"
authors = ["Yann Jorelle <yann@yannjorelle.com>"]
description = "Print pokemon sprites in your terminal"
repository = "https://github.com/yannjor/krabby"
homepage = "https://github.com/yannjor/krabby"
edition = "2021"
readme = "README.md"
license = "GPL-3.0"
keywords = ["pokemon", "terminal", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Cli
clap = { version = "4.3.19", features = ["derive"] }
serde = { version = "1.0.180", features = ["derive"]}
serde_json = "1.0.104"
rand = "0.8.5"
rust-embed = "6.8.1"
thiserror = "1.0.44"
# Config
dirs = "5.0.1"
toml = "0.7.6"
