[package]
name = "krabby"
version = "0.3.1"
authors = ["Yann Jorelle <yann@jorelle.fi>"]
description = "Print pokemon sprites in your terminal"
repository = "https://github.com/yannjor/krabby"
homepage = "https://github.com/yannjor/krabby"
edition = "2024"
readme = "README.md"
license = "GPL-3.0"
keywords = ["pokemon", "terminal", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug-embed = ["rust-embed/debug-embed"]

[dependencies]
# Cli
clap = { version = "4.5.31", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.9.0"
rust-embed = "8.6.0"
thiserror = "2.0.12"
# Config
dirs = "6.0.0"
toml = "0.8.20"
